2007-06-16  Vincent Fourmond  <vincent.fourmond@ibsm.cnrs-mrs.fr>

	* pmount.c (usage): 
	Add a -p shortcut for --passphrase

2007-06-13  Vincent Fourmond  <fourmond@debian.org>

	* fs.c: 
	Added errors=continue to ext2, ext3 and jfs FS entries.
