@@ -3,7 +3,7 @@ AC_PREREQ(2.52)
 AC_INIT(src/pmount.c)
 AM_CONFIG_HEADER(config.h)
 AC_CONFIG_SRCDIR(src)
-AM_INIT_AUTOMAKE(pmount, 0.9.13)
+AM_INIT_AUTOMAKE(pmount, 0.9.14)
 
 AC_PROG_INTLTOOL([0.21])
 
